--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-carousel": "^0.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
