--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ click==8.1.3
 Flask==2.2.2
 Jinja2==3.1.2
 Werkzeug==2.2.2
+python-dotenv==0.21.0
+flask-cors==3.0.10
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.5
 bcrypt==4.0.1
