--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.6.8",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vue3-carousel": "^0.2.5"
@@ -18,7 +20,9 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0"
   },
   "browserslist": [
     "> 1%",
