Image component work in progress

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=172.18.0.3
+DATABASE_URL=localhost
 DATABASE_NAME=final_project
 DATABASE_USERNAME=final_project
 DATABASE_PASSWORD=password
